ParrotPronto - basico+bônus

--- a/Index.html
+++ b/Index.html
@@ -20,6 +20,10 @@
 <body>
 
     <header>PARROT CARD GAME</header>
+    <aside>
+        <span>TEMPO</span>
+        <div class="cronometro">0</div>
+    </aside>
 
     <main>
     </main>
